test/runnable/module_level.cx
module module_level;

macro import cx.macros.assert;

int foo() { return 1; }

void main() {
    int foo() { return 2; }
    assert(foo() == 2);
    assert(.foo() == 1);
}
