test/fail_compilation/either.cx
module either;

macro import cx.macros.assert;

 void main() {
     (string | int) e = "foo";
     assert(e.case(string s: 1) == 1);
 }
